# prac7

prac3cpp/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  tests.cpp
